add support for customizable bullet points
Implemented Bulletpoint struct to map ascii characters to bullet point symbols.
Added functionality to recognize and render bullet points using this mapping in load function,
if the respective ascii character followed by a space is placed at the beginning of a line.

--- a/sent.1
+++ b/sent.1
@@ -62,6 +62,10 @@ Ignore this input line.
 Create input line using the characters following the
 .Sy \e
 without interpreting them.
+.It Sy *, >
+Generate a corresponding bullet point symbol if the
+.Sy *, >
+is followed by a space.
 .El
 .Sh CUSTOMIZATION
 .Nm
